--- a/index.html
+++ b/index.html
@@ -130,37 +130,40 @@
 		
 		<section class="event mt-5 pt-5">
 		  <div class="event-container">
-			<div class="event-contents1">
-				<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-				  <div class="carousel-inner">
-					<div class="carousel-item active">
-					  <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
-					</div>
-					<div class="carousel-item">
-					  <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Second slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"/><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
-					</div>
-					<div class="carousel-item">
-					  <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Third slide"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"/><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
-					</div>
-				  </div>
-				  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
+		  <div class="event-contents1">
+			<div id="carousel-2" class="carousel slide carousel-fade" data-ride="carousel" data-interval="6000">
+			  <ol class="carousel-indicators">
+				<li data-target="#carousel-2" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-2" data-slide-to="1"></li>
+				<li data-target="#carousel-2" data-slide-to="2"></li>
+			  </ol>
+			  <div class="carousel-inner" role="listbox">
+				<div class="carousel-item active">
+				  <a href="">
+					<img src="img/event1.jpeg" alt="responsive image" class="d-block img-fluid">
 				  </a>
-				  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
+				</div>
+				<div class="carousel-item">
+				  <a href="">
+					<img src="img/event2.jpeg" alt="responsive image" class="d-block img-fluid">
 				  </a>
-				</div><!--/.carousel-->
-			</div><!--/.event-contents1-->
-			<div class="event-contents2 col-4">
-				<div class="sub-title text-center">
+				</div>
+				<div class="carousel-item">
+				  <a href="">
+					<img src="img/event3.jpeg" alt="responsive image" class="d-block img-fluid">
+				  </a>
+				</div>
+			  </div>
+			</div>
+		  </div><!--/.event-contents1-->
+			<div class="event-contents2">
+				<div class="sub-title text-center mt-5 mt-lg-0">
 					<h2>EVENTS</h2>
 					<p>イベント紹介</p>
-				<p>定期的に「おひとりさま」を楽しめる<br>様々なイベント用意しています。</p>
-				<div class="btn">
-					<a href="#">MORE</a>
-				</div><!--/.btn-->
+					<p class="mt-5">定期的に「おひとりさま」を楽しめる<br>様々なイベント用意しています。</p>
+					<div class="btn mt-4">
+						<a href="#">MORE</a>
+					</div><!--/.btn-->
 				</div><!--/.title-->
 			</div><!--/.event-contents2-->
 		  </div><!--/.container-->
@@ -185,6 +188,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
