--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		  </div><!--/.container-->
 		</section><!--/.service--------------------------------->
 		
-		<section class="event mt-5 pt-5">
+		<section class="event my-5 pt-5">
 		  <div class="event-container">
 		  <div class="event-contents1">
 			<div id="carousel-2" class="carousel slide carousel-fade" data-ride="carousel" data-interval="6000">
@@ -160,7 +160,9 @@
 				<div class="sub-title text-center mt-5 mt-lg-0">
 					<h2>EVENTS</h2>
 					<p>イベント紹介</p>
-					<p class="mt-5">定期的に「おひとりさま」を楽しめる<br>様々なイベント用意しています。</p>
+					<div class="event-text">
+						<p class="mt-5">定期的に「おひとりさま」を楽しめる<br>様々なイベント用意しています。</p>
+					</div>
 					<div class="btn mt-4">
 						<a href="#">MORE</a>
 					</div><!--/.btn-->
@@ -172,6 +174,23 @@
 	</div><!--/.full-wrap-->
 	
 	<section class="concept">
+		<div class="fixed-background background-1">
+			<div class="concept-container">
+				<div class="concept-content">
+					<div class="sub-title text-center">
+						<h2>CONCEPT</h2>
+						<p>私たちのコンセプト</p>
+					</div><!--/.sub-titile-->
+					<div class="concept-text">
+						<p>reposとはフランス語で「リラックスする」ことを指します。
+						そんな私たちは、様々な「おひとりさま」が、<space>少しばかり現実を忘れてリラックスし、
+						新しい出会いを楽しむことを目的に存在します。</space>こだわりは、立地と会員制です。
+						都心地から３０分の距離ですが、自然に囲まれており。
+						会員になっていただくことで、(お酒やサービスの)面倒なお会計が一切ありません。</p>
+					</div><!--/.concept-text-->
+				</div><!--/.content-->
+			</div><!--/.container-->
+		</div><!--/.fixed-bg-->
 	</section><!--/.concept-->
 	
 	<section class="recruit">
