--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				</div><!--/.title-->
 			</div><!--/.event-contents2-->
 		  </div><!--/.container-->
-		</section><!--/.events-->
+		</section><!--/.events---------------------------------------->
 		
 	</div><!--/.full-wrap-->
 	
@@ -191,7 +191,7 @@
 				</div><!--/.content-->
 			</div><!--/.container-->
 		</div><!--/.fixed-bg-->
-	</section><!--/.concept-->
+	</section><!--/.concept--------------------------------------------->
 	
 	<section class="recruit">
 	</section><!--/.recruit-->
