--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<h2>NEWS</h2>
 					<p>お知らせ</p>
 				</div><!--/.title-->
-				<div class="news-contents pt-lg-0 pt-4 px-lg-5 px-sm-0 px-md-5 px-0">
+				<div class="news-contents pt-0 pt-4 px-lg-5 px-sm-0 px-md-5 px-0">
 					<div class="news-item">
 						<div class="doc">
 							<time class="datetime pr-2" date="2020.12.6">2020.12.06</time>
@@ -178,7 +178,7 @@
 		</div><!--/.full-wrap-->
 		
 		<section class="concept">
-			<div class="fixed-background background-1">
+			<div id="concept" class="fixed-background background-1">
 				<div class="concept-container">
 					<div class="concept-content">
 						<div class="sub-title text-center">
@@ -241,11 +241,11 @@
 		
 		<footer class="footer">
 			<div class="footer-container container-fluid pt-4 pb-2">
-			  <nav class="navbar d-flex flex-lg-row flex-column-reverse align-content-lg-center align-content-start">
-				<div class="navbar-brand pl-lg-0 pl-5">
+			  <nav class="navbar d-flex flex-xl-row flex-column-reverse align-content-xl-center align-content-start">
+				<div class="navbar-brand pl-xl-0 pl-5">
 					<a class="navbar-brand text-white" href="#">repos</a>
 				</div><!--/.brand-->
-				<ul class="f-navbar-nav d-lg-flex flex-lg-row">
+				<ul class="f-navbar-nav d-xl-flex flex-xl-row">
 				  <li>
 					<a class="text-white" href="#">Home</a>
 				  </li>
