--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 	<title>repos</title>
 	<!--/.fontawsome-->
 	<script src="https://kit.fontawesome.com/5f3f2c0119.js" crossorigin="anonymous"></script>
+	<!--ogp-->
+	<meta property="og:url" content="https://micmic541.github.io/repos.github.oi/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="repos">
+	<meta property="og:description" content="お一人様のための逃現境をご提供">
+	<meta property="og:site_name" content="repos">
+	<meta property="og:image" content="https://images.unsplash.com/photo-1602765123252-761af20a2836?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
   </head>
   
   <body>
